fixed spacing bug on promotional banner

--- a/frontend/src/components/RatingBanner/ratingBanner.css
+++ b/frontend/src/components/RatingBanner/ratingBanner.css
@@ -7,7 +7,7 @@
 }
 
 .singleItem {
-    justify-content: space-evenly;
+    justify-content: space-evenly !important;
     line-height: 1.7;
 }
 
